<resources>
    <string name="versao">Administração das vacinas v. 1.0</string>
    <string name="app_name">CovidApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="criar_cargo_fragment_label">Adicionar Cargo</string>
    <string name="criar_profissionalsaude_fragment_label">Adicionar Profissional de Saúde</string>
    <string name="editar_profissionalsaude_fragment_label">Editar Profissional de Saude</string>
    <string name="editar_utente_fragment_label">Editar Utente</string>
    <string name="editar_vacina_fragment_label">Editar Vacina</string>
    <string name="eliminar_utente_fragment_label">Eliminar Utente</string>
    <string name="lista_doses_fragment_label">Lista de Doses</string>
    <string name="lista_utentes_fragment_label">Lista dos Utentes</string>
    <string name="nova_vacina_fragment_label">Adicionar Nova Vacina</string>
    <string name="novo_utente_fragment_label">Adicionar novo Utente</string>
    <string name="profissionalsaude_fragment_label">Lista dos Profissionais de Saude</string>
    <string name="ver_vacinas_fragment_label">Ver vacinas</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="novo_utente">Novo Utente</string>
    <string name="editar_utente">Editar Utente</string>
    <string name="nova_dose">Nova Dose</string>
    <string name="eliminar_utente">Eliminar o Utente</string>
    <string name="utente_eliminado_sucesso">Utente eliminado com sucesso</string>

    <string name="nome">Nome</string>
    <string name="data_nascimento">Data de Nascimento</string>
    <string name="preencha_nome">Insira o nome</string>
    <string name="preencha_data_nascimento">Insira a Data de nascimento</string>

    <string name="erro_eliminar_utente">Erro ao apagar utente</string>
    <string name="erro_editar_utente">Erro ao alterar utente</string>
    <string name="erro_inserir_utente">Erro ao inserir utente</string>
    <string name="utente_guardado_sucesso">Utente guardado com sucesso</string>

    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>

    <string name="menu_principal">Menu Principal</string>
    <string name="editar_vacina">Editar Vacina</string>
    <string name="nova_vacina">Nova Vacina</string>

    <string name="menu_principal_fragment_label">CovidApp</string>
    <string name="nova_dose_fragment_label">Inserir nova dose</string>
    <string name="nome_da_vacina">Nome da vacina</string>
    <string name="quantidade">Quantidade</string>

    <string name="preencha_nome_vacina">Preencha nome vacina</string>
    <string name="preencha_quantidade">Preencha quantidade</string>

    <string name="erro_inserir_vacina">Erro na inserção</string>
    <string name="vacina_guardada_sucesso">Erro a guardar</string>
    <string name="erro_editar_vacina">Erro ao editar vacina</string>
    <string name="erro_inserir_cargo">Erro ao inserir cargo</string>
    <string name="novo_cargo_guardado_sucesso">Novo cargo guardado com sucesso</string>
    <string name="doses">Doses</string>
    <string name="vacinas">Vacinas</string>
    <string name="profissional_de_sa_de">Profissional de Saúde</string>
    <string name="utente">Utente</string>
    <string name="novo_cargo">Novo cargo</string>
    <string name="novo_profissional_saude">novo_profissional_saude</string>
    <string name="editar_profissional_saude">editar_profissional_saude</string>
    <string name="criar_cargo">Criar cargo</string>
    <string name="profiss_o">Profissão</string>
    <string name="erro_inserir_nome">Erro ao inserir nome</string>
    <string name="cargo_guardado_sucesso">Cargo guardado com sucesso</string>
    <string name="erro_alterar_profissional_saude">Erro alterar o profissional de saude</string>
    <string name="profissional_saude_guardado_sucesso">Profissional de saude guardado com sucesso</string>
    <string name="erro_inserir_dose">Erro ao inserir dose</string>
    <string name="dose_guardada_sucesso">Dose guardada com sucesso</string>

</resources>