<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MenuPrincipalFragment">

    <fragment
        android:id="@+id/Lista_Doses_Fragment"
        android:name="pt.ipg.covidapp.ListaDosesFragment"
        android:label="@string/lista_doses_fragment_label"
        tools:layout="@layout/fragment_lista_doses">
        <action
            android:id="@+id/action_Lista_Doses_Fragment_to_MenuPrincipalFragment"
            app:destination="@id/MenuPrincipalFragment" />
    </fragment>
    <fragment
        android:id="@+id/ListaUtenteFragment"
        android:name="pt.ipg.covidapp.ListaUtentesFragment"
        android:label="@string/lista_utentes_fragment_label"
        tools:layout="@layout/fragment_lista_utentes">
        <action
            android:id="@+id/action_Lista_Utente_Fragment_to_Novo_Utente_Fragment"
            app:destination="@id/NovoUtenteFragment" />
        <action
            android:id="@+id/action_Lista_Utente_Fragment_to_Editar_Utente_Fragment"
            app:destination="@id/EditarUtenteFragment" />
        <action
            android:id="@+id/action_ListaUtenteFragment_to_EliminarUtenteFragment"
            app:destination="@id/EliminarUtenteFragment" />
        <action
            android:id="@+id/action_ListaUtenteFragment_to_MenuPrincipalFragment"
            app:destination="@id/MenuPrincipalFragment" />
        <action
            android:id="@+id/action_ListaUtenteFragment_to_novaDoseFragment"
            app:destination="@id/NovaDoseFragment" />
    </fragment>
    <fragment
        android:id="@+id/NovoUtenteFragment"
        android:name="pt.ipg.covidapp.NovoUtenteFragment"
        android:label="@string/novo_utente_fragment_label"
        tools:layout="@layout/fragment_novo_utente">
        <action
            android:id="@+id/action_novo_Utente_Fragment_to_SecondFragment"
            app:destination="@id/ListaUtenteFragment" />
    </fragment>
    <fragment
        android:id="@+id/EditarUtenteFragment"
        android:name="pt.ipg.covidapp.EditarUtenteFragment"
        android:label="@string/editar_utente_fragment_label">
        <action
            android:id="@+id/action_Editar_Utente_Fragment_to_Lista_Utente_Fragment"
            app:destination="@id/ListaUtenteFragment" />
    </fragment>
    <fragment
        android:id="@+id/EliminarUtenteFragment"
        android:name="pt.ipg.covidapp.EliminarUtenteFragment"
        android:label="@string/eliminar_utente_fragment_label"
        tools:layout="@layout/fragment_eliminar_utente">
        <action
            android:id="@+id/action_eliminarUtenteFragment_to_Lista_Utente_Fragment"
            app:destination="@id/ListaUtenteFragment" />
    </fragment>
    <fragment
        android:id="@+id/VerVacinasFragment"
        android:name="pt.ipg.covidapp.VerVacinasFragment"
        android:label="@string/ver_vacinas_fragment_label"
        tools:layout="@layout/fragment_ver_vacinas">
        <action
            android:id="@+id/action_VerVacinasFragment_to_NovaVacinaFragment"
            app:destination="@id/NovaVacinaFragment" />
        <action
            android:id="@+id/action_VerVacinasFragment_to_editarVacinaFragment"
            app:destination="@id/editarVacinaFragment" />
        <action
            android:id="@+id/action_VerVacinasFragment_to_MenuPrincipalFragment"
            app:destination="@id/MenuPrincipalFragment" />
    </fragment>
    <fragment
        android:id="@+id/NovaVacinaFragment"
        android:name="pt.ipg.covidapp.NovaVacinaFragment"
        android:label="@string/nova_vacina_fragment_label"
        tools:layout="@layout/fragment_nova_vacina">
        <action
            android:id="@+id/action_NovaVacinaFragment_to_VerVacinasFragment"
            app:destination="@id/VerVacinasFragment" />
    </fragment>
    <fragment
        android:id="@+id/editarVacinaFragment"
        android:name="pt.ipg.covidapp.EditarVacinaFragment"
        android:label="@string/editar_vacina_fragment_label"
        tools:layout="@layout/fragment_editar_vacina">
        <action
            android:id="@+id/action_editarVacinaFragment_to_VerVacinasFragment"
            app:destination="@id/VerVacinasFragment" />
    </fragment>
    <fragment
        android:id="@+id/MenuPrincipalFragment"
        android:name="pt.ipg.covidapp.MenuPrincipalFragment"
        android:label="@string/menu_principal_fragment_label"
        tools:layout="@layout/fragment_menu_principal">
        <action
            android:id="@+id/action_MenuPrincipalFragment_to_ProfissionalSaudeFragment"
            app:destination="@id/ProfissionalSaudeFragment" />
        <action
            android:id="@+id/action_MenuPrincipalFragment_to_VerVacinasFragment"
            app:destination="@id/VerVacinasFragment" />
        <action
            android:id="@+id/action_MenuPrincipalFragment_to_ListaUtenteFragment"
            app:destination="@id/ListaUtenteFragment" />
        <action
            android:id="@+id/action_MenuPrincipalFragment_to_Lista_Doses_Fragment"
            app:destination="@id/Lista_Doses_Fragment" />
    </fragment>
    <fragment
        android:id="@+id/ProfissionalSaudeFragment"
        android:name="pt.ipg.covidapp.ProfissionalSaudeFragment"
        android:label="@string/profissionalsaude_fragment_label"
        tools:layout="@layout/fragment_profissional_saude">
        <action
            android:id="@+id/action_ProfissionalSaudeFragment_to_MenuPrincipalFragment"
            app:destination="@id/MenuPrincipalFragment" />
        <action
            android:id="@+id/action_ProfissionalSaudeFragment_to_CriarCargoFragment"
            app:destination="@id/CriarCargoFragment" />
        <action
            android:id="@+id/action_ProfissionalSaudeFragment_to_CriarProfissionalSaudeFragment"
            app:destination="@id/CriarProfissionalSaudeFragment" />
        <action
            android:id="@+id/action_ProfissionalSaudeFragment_to_EditarProfissionalSaudeFragment"
            app:destination="@id/EditarProfissionalSaudeFragment" />
    </fragment>
    <fragment
        android:id="@+id/CriarCargoFragment"
        android:name="pt.ipg.covidapp.CriarCargoFragment"
        android:label="@string/criar_cargo_fragment_label"
        tools:layout="@layout/fragment_criar_cargo">
        <action
            android:id="@+id/action_CriarCargoFragment_to_ProfissionalSaudeFragment"
            app:destination="@id/ProfissionalSaudeFragment" />
    </fragment>
    <fragment
        android:id="@+id/CriarProfissionalSaudeFragment"
        android:name="pt.ipg.covidapp.CriarProfissionalSaudeFragment"
        android:label="@string/criar_profissionalsaude_fragment_label"
        tools:layout="@layout/fragment_criar_profissional_saude">
        <action
            android:id="@+id/action_CriarProfissionalSaudeFragment_to_ProfissionalSaudeFragment"
            app:destination="@id/ProfissionalSaudeFragment" />
    </fragment>
    <fragment
        android:id="@+id/EditarProfissionalSaudeFragment"
        android:name="pt.ipg.covidapp.EditarProfissionalSaudeFragment"
        android:label="@string/editar_profissionalsaude_fragment_label"
        tools:layout="@layout/fragment_editar_profissional_saude">
        <action
            android:id="@+id/action_EditarProfissionalSaudeFragment_to_ProfissionalSaudeFragment"
            app:destination="@id/ProfissionalSaudeFragment" />
    </fragment>
    <fragment
        android:id="@+id/NovaDoseFragment"
        android:name="pt.ipg.covidapp.NovaDoseFragment"
        android:label="@string/nova_dose_fragment_label"
        tools:layout="@layout/fragment_nova_dose">
        <action
            android:id="@+id/action_novaDoseFragment_to_ListaUtenteFragment"
            app:destination="@id/ListaUtenteFragment" />
    </fragment>
</navigation>