<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipalFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="150dp"
        android:layout_height="51dp"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:text="CovidApp"
        android:textColor="#E61010"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="103dp" />

    <Button
        android:id="@+id/buttonUtente"
        android:layout_width="118dp"
        android:layout_height="54dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="144dp"
        android:layout_marginRight="144dp"
        android:text="@string/utente"
        app:backgroundTint="#DD2B2B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/buttonDoses"
        android:layout_width="118dp"
        android:layout_height="54dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="144dp"
        android:layout_marginRight="144dp"
        android:text="@string/doses"
        app:backgroundTint="#DD2B2B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUtente" />

    <Button
        android:id="@+id/buttonVacinas"
        android:layout_width="118dp"
        android:layout_height="54dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="144dp"
        android:layout_marginRight="144dp"
        android:text="@string/vacinas"
        app:backgroundTint="#DD2B2B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDoses" />

    <Button
        android:id="@+id/buttonProfissionalSaude"
        android:layout_width="155dp"
        android:layout_height="57dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:text="@string/profissional_de_sa_de"
        app:backgroundTint="#DD2B2B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonVacinas" />
</androidx.constraintlayout.widget.ConstraintLayout>